alb-controller-seoul.yaml
# ALB Controller 배포
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
        - args:
            - --cluster-name=myapp-seoul  # 클러스터 이름 명시
            - --ingress-class=alb
            - --ingress-class-config-default=true
          image: public.ecr.aws/eks/aws-load-balancer-controller:v2.7.1
          name: controller
