my-node-app-deployment-tokyo.yaml
# my-node-app 애플리케이션을 배포하는 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app
  namespace: default
  labels:
    app: my-node-app
spec:
  replicas: 2  # 초기 Pod 수 (HPA가 이 값을 조정함)
  selector:
    matchLabels:
      app: my-node-app
  template:
    metadata:
      labels:
        app: my-node-app
    spec:
      containers:
        - name: my-node-app
          image: 501257812675.dkr.ecr.ap-northeast-1.amazonaws.com/my-node-app:latest
          ports:
            - containerPort: 8080  # 애플리케이션 포트
          resources:
            requests:      # 최소 보장 리소스
              cpu: 100m
              memory: 128Mi
            limits:        # 최대 허용 리소스
              cpu: 200m
              memory: 256Mi
---
# 외부 ALB와 연결되기 위한 NodePort 서비스
apiVersion: v1
kind: Service
metadata:
  name: my-node-app-svc
  namespace: default
  labels:
    app: my-node-app
  annotations:
    alb.ingress.kubernetes.io/target-type: ip  # IP 기반 타겟 사용
spec:
  type: NodePort  # ClusterIP 대신 NodePort → ALB가 이 포트를 바라보게 됨
  ports:
    - port: 80          # 클라이언트가 접속할 포트 (ex: ALB가 요청 보냄)
      targetPort: 8080  # 실제 컨테이너 포트
  selector:
    app: my-node-app
